Kubernetes/networkPolicy/pod1.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
  labels:
    app: nginx-app
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
