Kubernetes/networkPolicy/pod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-2
  labels:
    app: nginx-app
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
